[package]
name = "sdjwt-commitments"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
curve25519-dalek = {version = "5.0.0-pre.4", features = ["rand_core", "digest"]}
rand = "0.10.0-rc.3"
serde_json = "1.0.149"
sha2 = "0.11.0-rc.3"
heidi-jwt = {git = "https://github.com/heidiverse/heidi-jwt.git"}
serde = { version = "1.0.228", features = ["derive"] }
